[project]
name = "abc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hussainezzi", email = "hussainezzi03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.301",
]

[project.scripts]
abc = "abc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
